# CandleThrob

./: .gitignore  CODE_OF_CONDUCT.md  README.md  __init__.py  __main__.py  config.py  database_service.py  local_test.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ingest.yml  transform.yml
data/etfs/: ARKK.parquet  DIA.parquet  IWM.parquet  QQQ.parquet  SLV.parquet  SOXL.parquet  SPY.parquet  SQQQ.parquet  TLT.parquet  TQQQ.parquet  VTI.parquet  XLE.parquet  XLF.parquet  XLI.parquet  XLK.parquet  XLP.parquet  XLV.parquet  XLY.parquet
data/macros/: macro_data.parquet
data/tickers/: A.parquet  AAPL.parquet  ABBV.parquet  ABNB.parquet  ABT.parquet  ACGL.parquet  ACN.parquet  ADBE.parquet  ADI.parquet  ADM.parquet  ADP.parquet  ADSK.parquet  AEE.parquet  AEP.parquet  AES.parquet  AFL.parquet  AIG.parquet  AIZ.parquet  AJG.parquet  AKAM.parquet  ALB.parquet  ALGN.parquet  ALL.parquet  ALLE.parquet  AMAT.parquet  AMCR.parquet  AMD.parquet  AME.parquet  AMGN.parquet  AMP.parquet  AMT.parquet  AMZN.parquet  ANET.parquet  ANSS.parquet  AON.parquet  AOS.parquet  APA.parquet  APD.parquet  APH.parquet  APO.parquet  (+481 more)
docs/: CODE_QUALITY_REPORT.md  DATABASE_MODELS.md  INDUSTRY_GRADE_SUMMARY.md  KESTRA_RUNIF_DEBUGGING.md  LOGGING_CONFIGURATION.md  QUICK_REFERENCE.md  README.md  TIMEOUT_CONFIGURATION.md  TRANSFORMATION_FLOWS_REFERENCE.md  index.md  schemas.md
docs/ingestion/: TALIB_GUIDE.md  enrich_data.md  fetch_data.md  ingest_data.md  monitor_ingestion.md  transform_data.md  validate_data.md
docs/tests/: README.md  SUMMARY.md  test_indicators.md  test_ingestion.md  test_macros.md
docs/transform/: enrich_data.md  transform_data.md
docs/utils/: gcs.md  models.md  oracledb.md
flows/: ingest_data.yaml  ingest_data_daily.yml  ingest_data_optimized.yml  transform_data.yml  transform_data_dev.yml  verify_flows.py
ingestion/: __init__.py  batch_calculator.py  check_batch_state.py  enrich_data.py  enrich_macros.py  enrich_tickers.py  fetch_data.py  ingest_data.py  master.py  monitor_ingestion.py  test_oracle_compatibility.py  trans_data.py  transform_data.py  update_macro.py  validate_data.py
notebooks/: data-collection.ipynb  sentiment-scoring.ipynb  visualization.ipynb
scripts/: db_utils.py  reddit_scraper.py
sql/: Candlethrob dashboard.twb  analysis_queries.sql  create_tables.sql
storage/: ticker_data.parquet  ticker_df_with_macro.csv
tests/: __init__.py  conftest.py  test_indicators.py  test_ingestion.py  test_macros.py
transform/: __init__.py  enrich_data.py  logging_config.py  transform_data.py
utils/: __init__.py  db_ping.py  gcs.py  logging_config.py  models.py  oracle_conn.py  oracledb.py  vault.py
